# OgreCrowd

./: CMakeLists.txt  License.txt  OgreRecast.cfg  README.md  resources.cfg.in
.github/workflows/: ci-build.yml
Samples/include/: BaseApplication.h
Samples/src/: BaseApplication.cpp  OgreRecastApplication.cpp  OgreRecastPagedCrowdApplication.cpp  OgreRecastTerrainApplication.cpp  SettingsFileParser.cpp
include/: Character.h  CrowdManager.h  InstancedCharacter.h  OgreDetourTileCache.h
resources/materials/: Instancing.material  recastdebug.material
src/: CrowdManager.cpp  InstancedCharacter.cpp  OgreDetourCrowd.cpp  OgreDetourTileCache.cpp  OgreRecast.cpp  RecastConvexHull.cpp
